[gd_scene load_steps=4 format=3 uid="uid://cp4md5563kno4"]

[ext_resource type="Script" path="res://Scripts/GUI/Main_Menu.gd" id="1_7pkej"]
[ext_resource type="Theme" uid="uid://uelmlaui1ayg" path="res://Themes/GUI/new_theme.tres" id="2_l0unu"]
[ext_resource type="FontFile" uid="uid://hvt8ls3ygheb" path="res://Themes/GUI/joystix monospace.otf" id="3_o03dd"]

[node name="Main_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7pkej")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Game_Title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_l0unu")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 12
theme_override_constants/shadow_offset_y = 12
theme_override_constants/outline_size = 12
theme_override_constants/shadow_outline_size = 12
theme_override_constants/line_spacing = 12
theme_override_fonts/font = ExtResource("3_o03dd")
theme_override_font_sizes/font_size = 150
text = "Game title"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Seperator" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6

[node name="Start" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme = ExtResource("2_l0unu")
theme_override_font_sizes/font_size = 80
text = "Start"

[node name="Settings" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme = ExtResource("2_l0unu")
theme_override_font_sizes/font_size = 80
text = "Settings"

[node name="Credits" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme = ExtResource("2_l0unu")
theme_override_font_sizes/font_size = 80
text = "Credits"

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme = ExtResource("2_l0unu")
theme_override_font_sizes/font_size = 80
text = "Exit"

[node name="Seperator2" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6

[connection signal="button_up" from="MarginContainer/VBoxContainer/Start" to="." method="_on_start_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/Settings" to="." method="_on_settings_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/Credits" to="." method="_on_credits_button_up"]
[connection signal="button_up" from="MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_button_up"]
